<resources>
    <string name="app_name">BearCare</string>
    <string name="sign_up_text_attribute">SIGN UP</string>
    <string name="login_text_attribute">LOGIN</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email_string">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="my_children">My Children</string>
    <string name="signed_in_successfully">Signed in successfully</string>
    <string name="no_account_associated">No account associated with this email and password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="fill_daily_questionnaire">Fill Daily Questionnaire</string>
    <string name="last_received">Last received:</string>
    <string name="yesterday">yesterday</string>
    <string name="notifications_string">Notifications</string>
    <string name="access_child_directory">Access Child Directory</string>
    <string name="only_employees_temp">Only employees can take temperature</string>
    <string name="logging_out">Logging out</string>
    <string name="child_directory">Child Directory</string>
    <string name="Logging_out">Logging out</string>
    <string name="yes_string">Yes</string>
    <string name="are_you_sure">Are you sure you want to delete this child?</string>
    <string name="employee_corner">Employee Corner</string>
    <string name="parent_corner">Parent Corner</string>
    <string name="no_string">No</string>
    <string name="child_name">CHILD NAME</string>
    <string name="primary_guardian_contact">Primary Guardian Contact</string>
    <string name="name_string">Name</string>
    <string name="relation_string">Relation</string>
    <string name="phone_string">Phone</string>
    <string name="employee_contact">Employee Contact</string>
    <string name="birthday_string">Birthday</string>
    <string name="temperature_records">Temperature Records</string>
    <string name="medical_records">Medical Records</string>
    <string name="take_temperature">Take Temperature</string>
    <string name="father_string">Father</string>
    <string name="add_a_notification">Add A Notification</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">FIRST NAME</string>
    <string name="first_name_hint">John</string>
    <string name="johnsmith_gmail_com">johnsmith@gmail.com</string>
    <string name="phone_allcaps_string">PHONE</string>
    <string name="phone_example_string">+1 (514) 123-5678</string>
    <string name="password_string">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="parent_guardian">Parent/Guardian</string>
    <string name="employee_string">Employee</string>
    <string name="director_string">Director</string>
    <string name="create_account_allcaps">CREATE ACCOUNT</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="type_string">Type</string>
    <string name="last_name">LAST NAME</string>
    <string name="last_name_hint">Smith</string>
    <string name="full_name_required">Full name is required</string>
    <string name="last_name_required">Last name is required</string>
    <string name="email_is_required">Email is required</string>
    <string name="provide_valid_email">Please provide valid email</string>
    <string name="phone_num_required">Phone number is required</string>
    <string name="valid_phone_number">Please provide valid phone number</string>
    <string name="password_required">Setting password is required</string>
    <string name="password_character_limit">Password has to be more than 6 characters long</string>
    <string name="confirm_password_required">Confirming password is required</string>
    <string name="password_not_match">Password did not match</string>
    <string name="provide_account_type">Please provide account type</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="director_corner">Director Corner</string>
    <string name="temperature_history">Temperature History</string>
    <string name="questionnaire_history">Questionnaire History</string>
    <string name="not_support_bluetooth">This device does not support Bluetooth.</string>
    <string name="connected_to_device">"Connected to device: "</string>
    <string name="first_name_required">Child first name is required</string>
    <string name="date_of_birth_required">Child date of birth is required</string>
    <string name="wrong_day_format">Wrong day format</string>
    <string name="wrong_month_format">Wrong month format</string>
    <string name="wrong_year_format">Wrong year format</string>
    <string name="parent_not_found">Parent not found: Case is sensitive</string>
    <string name="specify_title">Please specify a title</string>
    <string name="delete_child_confirmation">Are you sure you want to delete this child?</string>
    <string name="welcome_back_director">Welcome Back, Director</string>
    <string name="add_a_child">Add A Child</string>
    <string name="first_name_not_all_caps">First Name</string>
    <string name="last_name_not_all_caps">Last Name</string>
    <string name="parent_guardian_first_name">Parent/Guardian First Name</string>
    <string name="parent_guardian_last_name">Parent/Guardian Last Name</string>
    <string name="save_string">SAVE</string>
    <string name="cancel_string">CANCEL</string>
    <string name="year_hint">yyyy</string>
    <string name="month_hint">mm</string>
    <string name="day_hint">dd</string>
    <string name="agree_string">Agree</string>
    <string name="fever_list">Fever List</string>
    <string name="description_string">Description</string>
    <string name="title_string">Title</string>
    <string name="child_name_not_all_caps">Child Name</string>
    <string name="add_a_notification_for">Add A Notification For</string>
    <string name="select_a_date">Select A Date</string>
    <string name="select_a_time">Select A Time</string>
    <string name="date_string">Date</string>
    <string name="time_string">Time</string>
    <string name="settings_string">Settings</string>
    <string name="logout_string">Log out</string>
    <string name="discovering_sensor">Discovering sensor...</string>
    <string name="discovered_bluetooth_devices">Discovered Bluetooth Devices</string>
    <string name="connection_to">"Connection to "</string>
    <string name="failed_or_cancelled">" failed or cancelled."</string>
    <string name="paired_to">"Paired to: "</string>
    <string name="pairing_to">"Pairing to:  "</string>
    <string name="pair_broken_with">"Pair broken with: "</string>
    <string name="turn_on_bluetooth">Please turn on Bluetooth.</string>
    <string name="bluetooth_enabled">Bluetooth enabled</string>
    <string name="user_canceled">User canceled</string>
    <string name="location_services_enabled">Location services enabled. Click on discover to find BearCare Hardware.</string>
    <string name="permission_needed">Permission Needed</string>
    <string name="to_discover">To discover BearCare Sensors, location service permission must be granted</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="deny_permission">Deny Permission</string>
    <string name="enable_location_services">Enable Location Services</string>
    <string name="to_discover_location">To discover BearCare Sensors, location services must be turned on</string>
    <string name="turn_on_location">Turn on Location Services</string>
    <string name="cancel_not_all_caps">Cancel</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="attempting_to_connect">"Attempting to connect with: "</string>
    <string name="paired_bluetooth_devices">Paired Bluetooth Devices</string>
    <string name="discover_string">DISCOVER</string>
    <string name="temperature_recorded">Temperature Recorded</string>
    <string name="record_temperature">Take Temperature</string>
    <string name="click_record_temperature">" "</string>
    <string name="select_sensor">Select Sensor</string>
    <string name="sensor_connected">Sensor Connected</string>
    <string name="sensor_not_connected">Sensor Not Connected</string>
    <string name="please_enter_date">Please enter a date</string>
    <string name="please_enter_time">Please enter a time</string>
    <string name="notification_delete">Are you sure you want to delete this notification</string>
    <string name="absent_attendance">Absent</string>
    <string name="present_attendance">Present</string>
    <string name="temperature_history_of_child">\'s Temperature History</string>
    <string name="export_string">Export</string>
    <string name="questionnaire_records">Questionnaire Records</string>
    <string name="only_employees_attendance">Only employees can take attendance</string>
    <string name="choose_application">Choose an application to open with:</string>
    <string name="internet_connection">BearCare App Requires an Internet Connection Please Connect</string>
    <string name="upload_in_progress">Upload in Progress</string>
    <string name="file_uploaded">File Uploaded</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="error">Error</string>
    <string name="upload_medical_record">Upload Medical Record</string>
    <string name="select_file_from_storage">Select File from Storage</string>
    <string name="name_the_file">Name the File</string>
    <string name="upload_file">Upload file</string>
</resources>